hphp/hack/test/typecheck/references/pass_by_ref/pass_by_ref_annotation2.php.exp
File "pass_by_ref_annotation2.php", line 3, characters 28-28:
Encountered unexpected token '&'. (Parsing[1002])
File "pass_by_ref_annotation2.php", line 11, characters 11-11:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 11, characters 14-14:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 15, characters 15-15:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 16, characters 7-7:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 16, characters 10-10:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 16, characters 14-14:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 17, characters 7-7:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 17, characters 10-10:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 17, characters 14-14:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 18, characters 11-11:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 18, characters 14-14:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 19, characters 11-11:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 19, characters 14-14:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 20, characters 7-7:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 20, characters 10-10:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 20, characters 15-15:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 21, characters 7-7:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 21, characters 10-10:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 21, characters 15-15:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 23, characters 12-12:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 23, characters 15-15:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 23, characters 19-19:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 24, characters 16-16:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 24, characters 19-19:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 25, characters 20-20:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation2.php", line 11, characters 3-11:
Too few arguments (required 3 but got 2) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 16, characters 3-7:
Too few arguments (required 3 but got 1) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 17, characters 3-7:
Too few arguments (required 3 but got 1) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 18, characters 3-11:
Too few arguments (required 3 but got 2) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 19, characters 3-11:
Too few arguments (required 3 but got 2) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 20, characters 3-7:
Too few arguments (required 3 but got 1) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 21, characters 3-7:
Too few arguments (required 3 but got 1) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 23, characters 3-12:
Too few arguments (required 3 but got 1) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
File "pass_by_ref_annotation2.php", line 24, characters 3-16:
Too few arguments (required 3 but got 2) (Typing[4104])
File "pass_by_ref_annotation2.php", line 3, characters 10-12:
Definition is here
